--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "compilerOptions": {
     "outDir": "dist",
-    "module": "commonjs",
-    "target": "esnext",
+    "module": "CommonJS",
+    "target": "ESNext",
     "moduleResolution": "node",
-    "jsx": "react",
+    "jsx": "preserve",
     "sourceMap": true,
     "strict": true,
     "noFallthroughCasesInSwitch": true,
