--- a/package.json
+++ b/package.json
@@ -7,17 +7,16 @@
     "build": "tsc -p api/tsconfig.json && tsc -p web/tsconfig.json"
   },
   "dependencies": {
-    "chrome-aws-lambda": "2.1.1",
+    "chrome-aws-lambda": "9.1.0",
     "hero-patterns": "2.1.0",
     "heroicons": "0.4.2",
     "marked": "0.8.2",
-    "puppeteer-core": "2.1.1",
+    "puppeteer-core": "9.1.1",
     "twemoji": "12.1.5"
   },
   "devDependencies": {
     "@types/marked": "0.7.3",
-    "@types/puppeteer": "2.0.1",
-    "@types/puppeteer-core": "2.0.0",
-    "typescript": "3.8.3"
+    "puppeteer": "10.0.0",
+    "typescript": "4.3.2"
   }
 }
